<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:background="@drawable/reference_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rvdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:text="@string/car_name"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
        <!--内层参数填充-->
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:textSize="16sp"
                android:text="码 盘:"
                />

            <EditText
                android:id="@+id/coded_disc_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/mp_data" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:text="@string/line_disc"
                />

            <EditText
                android:id="@+id/tracking_speed_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/line_data" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:text="@string/angle_disc"/>
            <EditText
                android:id="@+id/wheel_speed_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/sp_data" />


        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:gravity="center_vertical"
            android:background="@drawable/reference_background"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingRight="10dp">


            <!--超声波-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="超声波："
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ultraSonicTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 mm"
                    android:textSize="16sp"
                    android:lines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ded7d7d7"/>

            <!--光照度-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="光照度："
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lightTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 lx"
                    android:textSize="16sp"
                    android:lines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ded7d7d7"/>

            <!--码盘值-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="码盘值："
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/codedDiskTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ded7d7d7"/>

            <!--光敏-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="光敏状态："
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/psStatusTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NULL"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ded7d7d7"/>

            <!--运行状态-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="运行状态："
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/stateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            >
            <!-- 参考资源：https://github.com/D10NGYANG/DL10RoundMenuView-->
            <car.bkrc.com.car2024.Utils.drawUtils.DLRoundMenuView
                android:id="@+id/dirve_Menu"
                android:layout_width="260dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:RMHasCoreMenu="true"
                app:RMCoreMenuNormalBackgroundColor="#cc529aed"
                app:RMCoreMenuStrokeColor="#CCECECEC"
                app:RMCoreMenuStrokeSize="1dp"
                app:RMCoreMenuSelectedBackgroundColor="#2EAACF"
                app:RMCoreMenuDrawable="@drawable/stop"
                app:RMCoreMenuRoundRadius="45dp"
                app:RMRoundMenuNumber="4"
                app:RMRoundMenuDeviationDegree="0"
                app:RMRoundMenuDrawable="@drawable/go"
                app:RMIsDrawLineToCenter="false"
                app:RMRoundMenuNormalBackgroundColor="#00000000"
                app:RMRoundMenuSelectedBackgroundColor="#CC87B7C3"
                app:RMRoundMenuStrokeColor="#CCECECEC"
                app:RMRoundMenuStrokeSize="1dp"
                app:RMRoundMenuDistance="75%"
                />
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>